fix sidebar z-index

--- a/src/styles/_includes/sidebar.scss
+++ b/src/styles/_includes/sidebar.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   display: flex;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 
   @media only screen and (min-width: 768px) {
     position: fixed;
@@ -183,33 +183,5 @@
   ul {
     list-style-type: none;
     padding-left: $spacer * 0.5;
-  }
-}
-
-.platform-dropdown {
-  max-width: fit-content;
-  .dropdown-toggle {
-    font-weight: 600;
-    font-family: 'Rubik', sans-serif;
-    border-radius: 8px;
-    background-color: $accent-purple;
-    color: $white !important;
-  }
-  .dropdown-menu {
-    left: 110% !important;
-    top: 50% !important;
-    transform: none !important;
-
-    border-radius: 8px;
-    background: $white;
-
-    /* basic drop shadow */
-    box-shadow: 0px 8px 24px 0px rgba(31, 22, 51, 0.15);
-    border: none;
-    padding: 1rem 0;
-
-    .dropdown-item {
-      padding: 0.5rem 2rem;
-    }
   }
 }
